--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="bg-white text-green-800 p-4 rounded-xl mb-6 shadow-inner">
                 <p class="text-lg font-semibold">இணைந்து நடத்துபவர்கள்:</p>
-                <p class="text-2xl font-bold mt-1">உடுமலை இன்னர் வீல் கிளை</p>
+                <p class="text-2xl font-bold mt-1">உடுமலை இன்னர் வீல் கிளப்</p>
             </div>
 
             <!-- Main Event Goal -->
