--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <section class="p-6 grid grid-cols-1 sm:grid-cols-2 gap-6 max-w-4xl mx-auto">
         <div class="stat-box p-6 rounded-2xl shadow-xl text-center border-b-4 border-yellow-600">
             <p class="text-xs font-bold mb-2 uppercase tracking-widest text-green-800 text-opacity-70">இதுவரையில் நடப்பட்ட</p>
-            <p class="text-5xl font-black">66,796</p>
+            <p class="text-5xl font-black">66816,</p>
             <p class="text-lg font-bold mt-1">மரக்கன்றுகள்</p>
         </div>
         <div class="stat-box p-6 rounded-2xl shadow-xl text-center border-b-4 border-yellow-600">
             <p class="text-xs font-bold mb-2 uppercase tracking-widest text-green-800 text-opacity-70">இதுவரையில் விதைத்த</p>
-            <p class="text-5xl font-black">87,000</p>
+            <p class="text-5xl font-black">144,200</p>
             <p class="text-lg font-bold mt-1">பனை விதைகள்</p>
         </div>
     </section>
@@ -98,12 +98,12 @@
         <div class="event-card p-8 rounded-3xl shadow-2xl border-4 border-yellow-400 text-center relative overflow-hidden">
             <div class="absolute -top-10 -right-10 opacity-10 w-40 h-40 bg-white rounded-full"></div>
             
-            <h2 class="text-xl sm:text-2xl font-bold mb-2 text-yellow-300">மழை உடுமலையின் 158வது தொடர் வாரம்</h2>
-            <h3 class="text-4xl sm:text-5xl font-black mb-8">178வது நிகழ்வு</h3>
+            <h2 class="text-xl sm:text-2xl font-bold mb-2 text-yellow-300">மழை உடுமலையின் 161வது தொடர் வாரம்</h2>
+            <h3 class="text-4xl sm:text-5xl font-black mb-8">181வது நிகழ்வு</h3>
 
             <div class="bg-white text-green-900 p-5 rounded-2xl mb-8 shadow-inner border-l-8 border-yellow-500">
                 <p class="text-sm font-bold uppercase text-green-700">இணைந்து நடத்துபவர்கள்:</p>
-                <p class="text-2xl md:text-3xl font-black mt-1">உடுமலை இன்னர் வீல் கிளப்</p>
+                <p class="text-2xl md:text-3xl font-black mt-1">தமிழ்நாடு வேளாண் பழ்கழைக்கழகம் கோயம்புத்தூர் மாணவிகள்</p>
             </div>
 
             <div class="mb-10">
@@ -118,21 +118,21 @@
                     <i data-lucide="calendar" class="text-yellow-400"></i>
                     <div>
                         <p class="text-xs font-light opacity-80">நாள் & கிழமை</p>
-                        <p class="text-xl font-bold text-white">16 நவம்பர் 2025, ஞாயிறு</p>
+                        <p class="text-xl font-bold text-white">01-01-2026, வியாழன்</p>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4 p-4 bg-green-800/50 rounded-xl">
                     <i data-lucide="clock" class="text-yellow-400"></i>
                     <div>
                         <p class="text-xs font-light opacity-80">நேரம்</p>
-                        <p class="text-xl font-bold text-white">காலை 7:25 மணி</p>
+                        <p class="text-xl font-bold text-white">காலை 9:00 மணி</p>
                     </div>
                 </div>
                 <div class="flex items-center space-x-4 p-4 bg-green-800/50 rounded-xl">
                     <i data-lucide="map-pin" class="text-yellow-400"></i>
                     <div class="flex-grow">
                         <p class="text-xs font-light opacity-80">நிகழ்விடம்</p>
-                        <p class="text-xl font-bold text-yellow-300">திணைக்குளம்</p>
+                        <p class="text-xl font-bold text-yellow-300">வர்ஷினி கார்டன்,மடத்துக்குளம்</p>
                     </div>
                     <a href="https://maps.google.com/?q=Thinaikkulam+Udumalaipettai" target="_blank" class="bg-yellow-400 text-green-900 p-2 rounded-lg hover:bg-white transition">
                         <i data-lucide="external-link" class="w-5 h-5"></i>
@@ -158,7 +158,7 @@
             </div>
             <div class="relative pl-10 timeline-item">
                 <p class="text-yellow-600 font-bold">2025 - தற்போது</p>
-                <h4 class="text-xl font-black">ஒரு லட்சம் பனை இலக்கு</h4>
+                <h4 class="text-xl font-black">ஒரு கோடி பனை இலக்கு</h4>
                 <p class="text-gray-600">பனை விதைகள் மூலம் நிலத்தடி நீர் மற்றும் மண்ணைப் பாதுகாக்க பெரும் முயற்சி.</p>
             </div>
         </div>
@@ -268,7 +268,7 @@
 
     <!-- Fixed WhatsApp Share -->
     <div class="fixed bottom-6 right-6 z-50">
-        <button onclick="window.open('whatsapp://send?text=மழை உடுமலை 178வது நிகழ்வில் பங்கேற்க வாருங்கள்!')" 
+        <button onclick="window.open('whatsapp://send?text=மழை உடுமலை 181வது நிகழ்வில் பங்கேற்க வாருங்கள்!')" 
                 class="bg-green-500 text-white p-4 rounded-full shadow-2xl hover:scale-110 transition flex items-center">
             <i data-lucide="share-2"></i>
         </button>
